# sl-platform

./: CHANGELOG  CMakeLists.txt  Doxyfile  README.md
src/platform/: platform.cpp  platform.h
